# QtZXing

./: .gitmodules  CMakeLists.txt  README.md  qmldir  qrdecoder.cpp  qrdecoder.h  qrquickitem.cpp  qrquickitem.h  qrvideosurface.cpp  qrvideosurface.h  qrvideowidget.cpp  qrvideowidget.h  qtzxing_plugin.cpp  qtzxing_plugin.h  zxingimagesource.cpp  zxingimagesource.h
